--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,23 +1,35 @@
-@use 'base/variables' as var;
+@use "base/variables" as var;
+@use "base/mixins" as m;
 
-.header{
+.header {
     margin: 2rem auto;
     height: 30%;
     width: 95%;
 
-    .header-container{
+    .header-container {
         display: flex;
-        gap: 3.5rem;
+        flex-direction: column;
         align-items: center;
-        flex-wrap: wrap;
+        @mixin tablet {
+            display: flex;
+            gap: 3.5rem;
+            align-items: center;
+            flex-wrap: wrap;
+        }
     }
     .header-img {
         width: auto;
     }
-    .header-h2{
+    .header-h2 {
         width: 100%;
         text-align: center;
         font-size: 3rem;
         margin: 0;
+    }
+    .header-h1 {
+        font-size: 2rem;
+        @include m.tablet {
+            font-size: 3rem;
+        }
     }
 }
