--- a/src/scss/layouts/_navegation-bar.scss
+++ b/src/scss/layouts/_navegation-bar.scss
@@ -1,22 +1,27 @@
-@use 'base/variables' as var;
-@use 'base/mixins' as mix;
+@use "base/variables" as var;
+@use "base/mixins" as mix;
 
-
-.navegation{
+.navegation {
     background-color: var.$negro;
 }
 
-.navegation-bar{
+.navegation-bar {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-evenly;
+
+    @include mix.tablet {
+        flex-direction: row;
+    }
 }
 
-.navegation-btn{
+.navegation-btn {
     padding: 2rem;
-    @include mix.href(var.$blanco,2rem,700);
-    
-    &:hover{
-        transition: .6s ease-in-out;
+    @include mix.href(var.$blanco, 2rem, 700);
+
+    &:hover {
+        transition: 0.6s ease-in-out;
         background-color: var.$blanco;
         color: var.$negro;
     }
