--- a/src/scss/layouts/_surtidores.scss
+++ b/src/scss/layouts/_surtidores.scss
@@ -3,10 +3,14 @@
 
 .surtidores {
     display: grid;
-    justify-items: center;
     grid-template-columns: 1fr;
+    justify-items: center;
     gap: 5rem;
     margin-top: 5rem;
+
+    @include m.tablet {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 
     .grid-bottom {
         gap: 5rem;
